--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./styles.css" />
     <title>Gamutps</title>
@@ -13,7 +12,7 @@
       <div class="info">
         <h3>Gamutps is currently under maintenance</h3>
         <h4>Please contact us with inquries</h4>
-        <img height="80px" src="https://www.iconsdb.com/icons/preview/white/email-xxl.png" />
+        <img height="100px" src="https://www.iconsdb.com/icons/preview/white/email-xxl.png" />
       </div>
     </div>
     <!-- particles.js lib - https://github.com/VincentGarreau/particles.js -->
@@ -22,7 +21,7 @@
       particlesJS("particles-js", {
         particles: {
           number: { value: 80, density: { enable: true, value_area: 800 } },
-          color: { value: "#2cb103" },
+          color: { value: "#236e1f" },
           shape: {
             type: "circle",
             stroke: { width: 0, color: "#000000" },
@@ -30,19 +29,25 @@
             image: { src: "img/github.svg", width: 100, height: 100 },
           },
           opacity: {
-            value: 0.5,
-            random: false,
+            value: 0.8049432988470365,
+            random: true,
             anim: { enable: false, speed: 1, opacity_min: 0.1, sync: false },
           },
           size: {
-            value: 3,
+            value: 2,
             random: true,
-            anim: { enable: false, speed: 40, size_min: 0.1, sync: false },
+            anim: { enable: false, speed: 0, size_min: 0.1, sync: false },
           },
-          line_linked: { enable: true, distance: 150, color: "#2cb103", opacity: 0.4, width: 1 },
+          line_linked: {
+            enable: true,
+            distance: 150,
+            color: "#3fa239",
+            opacity: 0.4,
+            width: 0.4734960581453156,
+          },
           move: {
             enable: true,
-            speed: 0.7,
+            speed: 2,
             direction: "none",
             random: true,
             straight: false,
@@ -52,14 +57,14 @@
           },
         },
         interactivity: {
-          detect_on: "canvas",
+          detect_on: "window",
           events: {
-            onhover: { enable: true, mode: "grab" },
-            onclick: { enable: false, mode: "remove" },
+            onhover: { enable: false, mode: "repulse" },
+            onclick: { enable: false, mode: "push" },
             resize: true,
           },
           modes: {
-            grab: { distance: 215.77042027282963, line_linked: { opacity: 1 } },
+            grab: { distance: 1102.8265925055737, line_linked: { opacity: 0.06475111290975316 } },
             bubble: { distance: 400, size: 40, duration: 2, opacity: 8, speed: 3 },
             repulse: { distance: 200, duration: 0.4 },
             push: { particles_nb: 4 },
