--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h3>Gamutps is currently under maintenance</h3>
         <h4>Please contact us with inquries</h4>
         <img
-          height="100px"
+          alt="mail"
           src="https://res.cloudinary.com/bfrest/image/upload/f_auto,q_auto/v1621800499/Gamut/mail_1.svg"
         />
       </div>
@@ -24,7 +24,7 @@
     <script>
       particlesJS("particles-js", {
         particles: {
-          number: { value: 80, density: { enable: true, value_area: 890 } },
+          number: { value: 80, density: { enable: true, value_area: 1000 } },
           color: { value: "#236e1f" },
           shape: {
             type: "circle",
@@ -33,7 +33,7 @@
             image: { src: "img/github.svg", width: 100, height: 100 },
           },
           opacity: {
-            value: 0.8049432988470365,
+            value: 1,
             random: true,
             anim: { enable: false, speed: 1, opacity_min: 0.1, sync: false },
           },
@@ -46,12 +46,12 @@
             enable: true,
             distance: 180,
             color: "#3fa239",
-            opacity: 0.4,
+            opacity: 0.8,
             width: 0.4734960581453156,
           },
           move: {
             enable: true,
-            speed: 0.3,
+            speed: 0.1,
             direction: "none",
             random: true,
             straight: false,
@@ -68,7 +68,7 @@
             resize: true,
           },
           modes: {
-            grab: { distance: 150, line_linked: { opacity: 0.7 } },
+            grab: { distance: 250, line_linked: { opacity: 0.9 } },
             bubble: { distance: 400, size: 40, duration: 2, opacity: 8, speed: 3 },
             repulse: { distance: 200, duration: 0.4 },
             push: { particles_nb: 4 },
