--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
     <!-- particles.js container -->
     <div id="particles-js">
       <div class="info">
-        <h3>Gamutps is currently under maintenance</h3>
-        <h4>Please contact us with inquries</h4>
-        <img
-          alt="mail"
-          src="https://res.cloudinary.com/bfrest/image/upload/f_auto,q_auto/v1621800499/Gamut/mail_1.svg"
-        />
+        <h1>GamutPS is currently under maintenance</h1>
+        <h2>Please contact us with inquries</h2>
+        <a href="mailto:jfarthing@gamutps.com"
+          ><img
+            alt="mail"
+            src="https://res.cloudinary.com/bfrest/image/upload/f_auto,q_auto/v1621800499/Gamut/mail_1.svg"
+        /></a>
       </div>
     </div>
 
