--- a/index.html
+++ b/index.html
@@ -7,77 +7,53 @@
     <title>Gamutps</title>
   </head>
   <body>
-    <!-- particles.js container -->
-    <div id="particles-js">
-      <div class="info">
-        <h1>GamutPS is currently under maintenance</h1>
-        <h2>Please contact us with inquries</h2>
-        <a href="mailto:jfarthing@gamutps.com"
-          ><img
-            alt="mail"
-            src="https://res.cloudinary.com/bfrest/image/upload/f_auto,q_auto/v1621800499/Gamut/mail_1.svg"
-        /></a>
-      </div>
+    <nav>
+      <ul>
+        <li>
+          <a href="#header">
+            <img
+              src="https://res.cloudinary.com/bfrest/image/upload/v1622808649/Gamut/Gmaut_Email_Green.png"
+              alt="logo"
+            />
+          </a>
+        </li>
+        <li>
+          <a href="#home">Home</a>
+        </li>
+        <li>
+          <a href="#about">About</a>
+        </li>
+        <li>
+          <a href="#services">Services</a>
+        </li>
+        <li>
+          <a href="#faq">FAQ</a>
+        </li>
+        <li>
+          <a href="#contact">Contact</a>
+        </li>
+      </ul>
+    </nav>
+
+    <div id="header">
+      <h2>Construction is now digital</h2>
+      <p>We blend technology with construction for foward-thinking companies.</p>
     </div>
 
-    <!-- particles.js lib - https://github.com/VincentGarreau/particles.js -->
-    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-    <script>
-      particlesJS("particles-js", {
-        particles: {
-          number: { value: 180, density: { enable: true, value_area: 1000 } },
-          color: { value: "#236e1f" },
-          shape: {
-            type: "circle",
-            stroke: { width: 0, color: "#000000" },
-            polygon: { nb_sides: 5 },
-            image: { src: "img/github.svg", width: 100, height: 100 },
-          },
-          opacity: {
-            value: 1,
-            random: true,
-            anim: { enable: false, speed: 1, opacity_min: 0.1, sync: false },
-          },
-          size: {
-            value: 1.5,
-            random: true,
-            anim: { enable: false, speed: 0, size_min: 0.1, sync: false },
-          },
-          line_linked: {
-            enable: true,
-            distance: 120,
-            color: "#3fa239",
-            opacity: 0.8,
-            width: 0.4734960581453156,
-          },
-          move: {
-            enable: true,
-            speed: 0.6,
-            direction: "none",
-            random: true,
-            straight: false,
-            out_mode: "out",
-            bounce: false,
-            attract: { enable: false, rotateX: 600, rotateY: 1200 },
-          },
-        },
-        interactivity: {
-          detect_on: "window",
-          events: {
-            onhover: { enable: true, mode: "grab" },
-            onclick: { enable: false, mode: "push" },
-            resize: true,
-          },
-          modes: {
-            grab: { distance: 250, line_linked: { opacity: 0.9 } },
-            bubble: { distance: 400, size: 40, duration: 2, opacity: 8, speed: 3 },
-            repulse: { distance: 200, duration: 0.4 },
-            push: { particles_nb: 4 },
-            remove: { particles_nb: 2 },
-          },
-        },
-        retina_detect: true,
-      });
-    </script>
+    <div id="about">
+      <h2>About what he do</h2>
+    </div>
+
+    <div id="services">
+      <h2>Takeoffs, models, cool stuff!</h2>
+    </div>
+
+    <div id="faq">
+      <h2>faq</h2>
+    </div>
+
+    <div id="contact">
+      <h2>Contact this man</h2>
+    </div>
   </body>
 </html>
