building the site

--- a/index.html
+++ b/index.html
@@ -36,20 +36,20 @@
     </nav>
 
     <div id="header">
-      <h2>Construction is now digital</h2>
+      <h2>Construction is Now Digital</h2>
       <p>We blend technology with construction for foward-thinking companies.</p>
     </div>
 
     <div id="about">
-      <h2>About what he do</h2>
+      <h2>About the process</h2>
     </div>
 
     <div id="services">
-      <h2>Takeoffs, models, cool stuff!</h2>
+      <h2>Takeoffs and all other things you need</h2>
     </div>
 
     <div id="faq">
-      <h2>faq</h2>
+      <h2>faq if needed</h2>
     </div>
 
     <div id="contact">
