--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
       </ul>
     </nav>
 
+    <div id="particles-js"></div>
     <div id="header">
       <h2>Construction is Now Digital</h2>
       <p>We blend technology with construction for foward-thinking companies.</p>
@@ -55,5 +56,65 @@
     <div id="contact">
       <h2>Contact this man</h2>
     </div>
+
+    <!-- particles.js lib - https://github.com/VincentGarreau/particles.js -->
+    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+    <script>
+      particlesJS("particles-js", {
+        particles: {
+          number: { value: 180, density: { enable: true, value_area: 1000 } },
+          color: { value: "#236e1f" },
+          shape: {
+            type: "circle",
+            stroke: { width: 0, color: "#000000" },
+            polygon: { nb_sides: 5 },
+            image: { src: "img/github.svg", width: 100, height: 100 },
+          },
+          opacity: {
+            value: 1,
+            random: true,
+            anim: { enable: false, speed: 1, opacity_min: 0.1, sync: false },
+          },
+          size: {
+            value: 1.5,
+            random: true,
+            anim: { enable: false, speed: 0, size_min: 0.1, sync: false },
+          },
+          line_linked: {
+            enable: true,
+            distance: 120,
+            color: "#3fa239",
+            opacity: 0.8,
+            width: 0.4734960581453156,
+          },
+          move: {
+            enable: true,
+            speed: 0.6,
+            direction: "none",
+            random: true,
+            straight: false,
+            out_mode: "out",
+            bounce: false,
+            attract: { enable: false, rotateX: 600, rotateY: 1200 },
+          },
+        },
+        interactivity: {
+          detect_on: "window",
+          events: {
+            onhover: { enable: true, mode: "grab" },
+            onclick: { enable: false, mode: "push" },
+            resize: true,
+          },
+          modes: {
+            grab: { distance: 250, line_linked: { opacity: 0.9 } },
+            bubble: { distance: 400, size: 40, duration: 2, opacity: 8, speed: 3 },
+            repulse: { distance: 200, duration: 0.4 },
+            push: { particles_nb: 4 },
+            remove: { particles_nb: 2 },
+          },
+        },
+        retina_detect: true,
+      });
+    </script>
   </body>
 </html>
