--- a/index.html
+++ b/index.html
@@ -42,11 +42,17 @@
     </div>
 
     <div id="about">
-      <h2>About the process</h2>
-    </div>
+      <div class="card">
+        <h3>Machine control files</h3>
+      </div>
 
-    <div id="services">
-      <h2>Takeoffs and all other things you need</h2>
+      <div class="card">
+        <h3>Take Off Report</h3>
+      </div>
+
+      <div class="card">
+        <h3>Other Cool Service</h3>
+      </div>
     </div>
 
     <div id="faq">
