--- a/index.html
+++ b/index.html
@@ -44,14 +44,29 @@
     <div id="about">
       <div class="card">
         <h3>Machine control files</h3>
+        <p
+          >Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquam libero doloribus
+          necessitatibus consectetur, quae odio quaerat adipisci illo facere, natus possimus? Minus,
+          architecto. Animi voluptatum voluptas, et alias quas ducimus.</p
+        >
       </div>
 
       <div class="card">
         <h3>Take Off Report</h3>
+        <p
+          >Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquam libero doloribus
+          necessitatibus consectetur, quae odio quaerat adipisci illo facere, natus possimus? Minus,
+          architecto. Animi voluptatum voluptas, et alias quas ducimus.</p
+        >
       </div>
 
       <div class="card">
         <h3>Other Cool Service</h3>
+        <p
+          >Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquam libero doloribus
+          necessitatibus consectetur, quae odio quaerat adipisci illo facere, natus possimus? Minus,
+          architecto. Animi voluptatum voluptas, et alias quas ducimus.</p
+        >
       </div>
     </div>
 
