--- a/index.html
+++ b/index.html
@@ -21,9 +21,6 @@
           <a href="#home">Home</a>
         </li>
         <li>
-          <a href="#about">About</a>
-        </li>
-        <li>
           <a href="#services">Services</a>
         </li>
         <li>
@@ -42,31 +39,43 @@
     </div>
 
     <div id="about">
+      <h3>Services</h3>
+      <p>
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusamus, alias nostrum
+        dignissimos praesentium ipsa a quam sint quis ea voluptas veniam fuga laborum ducimus
+        recusandae fugiat non enim facilis dolorum.
+      </p>
       <div class="card">
-        <h3>Machine control files</h3>
-        <p
-          >Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquam libero doloribus
+        <div class="cardHeader">
+          <img src="./Component 1.svg" alt="3d" height="60px" />
+          <h3>Machine control files</h3>
+        </div>
+        <p>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquam libero doloribus
           necessitatibus consectetur, quae odio quaerat adipisci illo facere, natus possimus? Minus,
-          architecto. Animi voluptatum voluptas, et alias quas ducimus.</p
-        >
+          architecto. Animi voluptatum voluptas, et alias quas ducimus.
+        </p>
       </div>
 
       <div class="card">
-        <h3>Take Off Report</h3>
-        <p
-          >Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquam libero doloribus
+        <div class="cardHeader">
+          <img src="./Component 2.svg" alt="report" height="60px" />
+          <h3>Take Off Report</h3>
+        </div>
+        <p>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquam libero doloribus
           necessitatibus consectetur, quae odio quaerat adipisci illo facere, natus possimus? Minus,
-          architecto. Animi voluptatum voluptas, et alias quas ducimus.</p
-        >
+          architecto. Animi voluptatum voluptas, et alias quas ducimus.
+        </p>
       </div>
 
       <div class="card">
         <h3>Other Cool Service</h3>
-        <p
-          >Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquam libero doloribus
+        <p>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquam libero doloribus
           necessitatibus consectetur, quae odio quaerat adipisci illo facere, natus possimus? Minus,
-          architecto. Animi voluptatum voluptas, et alias quas ducimus.</p
-        >
+          architecto. Animi voluptatum voluptas, et alias quas ducimus.
+        </p>
       </div>
     </div>
 
