--- a/index.html
+++ b/index.html
@@ -70,7 +70,10 @@
       </div>
 
       <div class="card">
-        <h3>Other Cool Service</h3>
+        <div class="cardHeader">
+          <img src="./satellite 1.svg" alt="gps" height="60px" />
+          <h3>Other Services</h3>
+        </div>
         <p>
           Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquam libero doloribus
           necessitatibus consectetur, quae odio quaerat adipisci illo facere, natus possimus? Minus,
