--- a/index.html
+++ b/index.html
@@ -39,12 +39,13 @@
     </div>
 
     <div id="about">
-      <h3>Services</h3>
-      <p>
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusamus, alias nostrum
-        dignissimos praesentium ipsa a quam sint quis ea voluptas veniam fuga laborum ducimus
-        recusandae fugiat non enim facilis dolorum.
-      </p>
+      <div class="intro">
+        <h3>Services</h3>
+        <p>
+          We help companies stop the guessing game when bidding or building a job. "needs more
+          description..."
+        </p>
+      </div>
       <div class="card">
         <div class="cardHeader">
           <img src="./Component 1.svg" alt="3d" height="60px" />
