--- a/index.html
+++ b/index.html
@@ -24,9 +24,6 @@
           <a href="#services">Services</a>
         </li>
         <li>
-          <a href="#faq">FAQ</a>
-        </li>
-        <li>
           <a href="#contact">Contact</a>
         </li>
       </ul>
@@ -83,12 +80,13 @@
       </div>
     </div>
 
-    <div id="faq">
-      <h2>faq if needed</h2>
-    </div>
-
     <div id="contact">
-      <h2>Contact this man</h2>
+      <form>
+        <input type="text" placeholder="Your name" />
+        <input type="email" placeholder="Your email" />
+        <textarea placeholder="Your message"></textarea>
+        <button>Send Message</button>
+      </form>
     </div>
 
     <!-- particles.js lib - https://github.com/VincentGarreau/particles.js -->
