--- a/index.html
+++ b/index.html
@@ -82,12 +82,23 @@
 
     <div id="contact">
       <form>
-        <input type="text" placeholder="Your name" />
-        <input type="email" placeholder="Your email" />
-        <textarea placeholder="Your message"></textarea>
+        <input type="text" placeholder="Your Name" />
+        <input type="email" placeholder="Your Email" />
+        <textarea placeholder="Your Message"></textarea>
         <button>Send Message</button>
       </form>
     </div>
+
+    <footer>
+      <img
+        src="https://res.cloudinary.com/bfrest/image/upload/v1622808649/Gamut/Gmaut_Email_Green.png"
+        alt="logo"
+      />
+      <p>323-994-0093</p>
+      <p>justinf@gamutps.com</p>
+      <p>GamutPS 2021©</p>
+      <p>Designed & Developed by Brendon Freston</p>
+    </footer>
 
     <!-- particles.js lib - https://github.com/VincentGarreau/particles.js -->
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
