--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <li>
           <a href="#header">
             <img
-              src="https://res.cloudinary.com/bfrest/image/upload/v1622808649/Gamut/Gmaut_Email_Green.png"
+              src="https://res.cloudinary.com/bfrest/image/upload/f_auto,q_auto/v1623728756/Gamut/gamut-logo.png"
               alt="logo"
             />
           </a>
@@ -45,7 +45,7 @@
       </div>
       <div class="card">
         <div class="cardHeader">
-          <img src="./Component 1.svg" alt="3d" height="60px" />
+          <img src="./Component 1.svg" alt="3d" height="40px" />
           <h3>Machine control files</h3>
         </div>
         <p>
@@ -57,7 +57,7 @@
 
       <div class="card">
         <div class="cardHeader">
-          <img src="./Component 2.svg" alt="report" height="60px" />
+          <img src="./Component 2.svg" alt="report" height="40px" />
           <h3>Take Off Report</h3>
         </div>
         <p>
@@ -69,7 +69,7 @@
 
       <div class="card">
         <div class="cardHeader">
-          <img src="./satellite 1.svg" alt="gps" height="60px" />
+          <img src="./satellite 1.svg" alt="gps" height="40px" />
           <h3>Other Services</h3>
         </div>
         <p>
@@ -91,8 +91,9 @@
 
     <footer>
       <img
-        src="https://res.cloudinary.com/bfrest/image/upload/v1622808649/Gamut/Gmaut_Email_Green.png"
+        src="https://res.cloudinary.com/bfrest/image/upload/f_auto,q_auto/v1623728756/Gamut/gamut-logo.png"
         alt="logo"
+        height="100px"
       />
       <p>323-994-0093</p>
       <p>justinf@gamutps.com</p>
