--- a/index.html
+++ b/index.html
@@ -35,23 +35,23 @@
       <p>We blend technology with construction for foward-thinking companies.</p>
     </div>
 
-    <div id="about">
-      <div class="intro">
-        <h3>Services</h3>
-        <p>
-          We help companies stop the guessing game when bidding or building a job. "needs more
-          description... "
-        </p>
-      </div>
+    <!-- <div class="intro">
+      <h3>Services</h3>
+      <p>
+        We help companies stop the guessing game when bidding or building a job. "needs more
+        description... "
+      </p>
+    </div> -->
+
+    <div class="serviceCards">
       <div class="card">
         <div class="cardHeader">
           <img src="./Component 1.svg" alt="3d" height="40px" />
-          <h3>Machine control files</h3>
+          <h3>Machine Control Files</h3>
         </div>
         <p>
           Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquam libero doloribus
-          necessitatibus consectetur, quae odio quaerat adipisci illo facere, natus possimus? Minus,
-          architecto. Animi voluptatum voluptas, et alias quas ducimus.
+          necessitatibus consectetur, quae odio quaerat adipisci illo facere.
         </p>
       </div>
 
@@ -62,8 +62,7 @@
         </div>
         <p>
           Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquam libero doloribus
-          necessitatibus consectetur, quae odio quaerat adipisci illo facere, natus possimus? Minus,
-          architecto. Animi voluptatum voluptas, et alias quas ducimus.
+          necessitatibus consectetur.
         </p>
       </div>
 
@@ -72,21 +71,32 @@
           <img src="./satellite 1.svg" alt="gps" height="40px" />
           <h3>Other Services</h3>
         </div>
-        <p>
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquam libero doloribus
-          necessitatibus consectetur, quae odio quaerat adipisci illo facere, natus possimus? Minus,
-          architecto. Animi voluptatum voluptas, et alias quas ducimus.
-        </p>
+        <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. </p>
       </div>
-    </div>
 
-    <div id="contact">
-      <form>
-        <input type="text" placeholder="Your Name" />
-        <input type="email" placeholder="Your Email" />
-        <textarea placeholder="Your Message"></textarea>
-        <button>Send Message</button>
-      </form>
+      <div class="steps">
+        <p class="howItWorks">Here is How It Works</p>
+        <div class="step one">
+          <div class="grayOverlay">step 1: Plan project and get your stamped plans </div>
+        </div>
+        <div class="step two">
+          <div class="grayOverlay"
+            >step 2: Fill out 3d model form here and send me digital plans</div
+          >
+        </div>
+        <div class="step three">
+          <div class="grayOverlay">step 3: Build 3D model, then send you machine control file.</div>
+        </div>
+      </div>
+
+      <div id="contact">
+        <form>
+          <input type="text" placeholder="Your Name" />
+          <input type="email" placeholder="Your Email" />
+          <textarea placeholder="Your Message"></textarea>
+          <button>Send Message</button>
+        </form>
+      </div>
     </div>
 
     <footer>
