--- a/index.html
+++ b/index.html
@@ -43,16 +43,15 @@
       </p>
     </div> -->
 
+    <h2>What We Offer</h2>
+
     <div class="serviceCards">
       <div class="card">
         <div class="cardHeader">
           <img src="./Component 1.svg" alt="3d" height="40px" />
           <h3>Machine Control Files</h3>
         </div>
-        <p>
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquam libero doloribus
-          necessitatibus consectetur, quae odio quaerat adipisci illo facere.
-        </p>
+        <p> We build 3d surfaces and files for you to use with your smart machines. </p>
       </div>
 
       <div class="card">
@@ -61,8 +60,8 @@
           <h3>Take Off Report</h3>
         </div>
         <p>
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquam libero doloribus
-          necessitatibus consectetur.
+          Need a hand on take off reports? We offer accurate and detailed reports of materials
+          needed.
         </p>
       </div>
 
@@ -71,26 +70,31 @@
           <img src="./satellite 1.svg" alt="gps" height="40px" />
           <h3>Other Services</h3>
         </div>
-        <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. </p>
+        <p> We also offer other things..like these options here </p>
       </div>
 
       <div class="steps">
         <p class="howItWorks">Here is How It Works</p>
         <div class="step one">
-          <div class="grayOverlay">step 1: Plan project and get your stamped plans </div>
+          <div class="grayOverlay"
+            >Fill out form for 3D models Here and/or the Takeoff form Here</div
+          >
         </div>
         <div class="step two">
           <div class="grayOverlay"
-            >step 2: Fill out 3d model form here and send me digital plans</div
+            >We build the model exactly to plan and get detailed takeoffs from plans</div
           >
         </div>
         <div class="step three">
-          <div class="grayOverlay">step 3: Build 3D model, then send you machine control file.</div>
+          <div class="grayOverlay"
+            >Load File on machine, allowing you to build your project exactly per plan</div
+          >
         </div>
       </div>
 
       <div id="contact">
         <form>
+          <h2>Questions?</h2>
           <input type="text" placeholder="Your Name" />
           <input type="email" placeholder="Your Email" />
           <textarea placeholder="Your Message"></textarea>
