--- a/index.html
+++ b/index.html
@@ -74,20 +74,20 @@
       </div>
 
       <div class="steps">
-        <p class="howItWorks">Here is How It Works</p>
+        <p class="howItWorks">Our Process</p>
         <div class="step one">
           <div class="grayOverlay"
-            >Fill out form for 3D models Here and/or the Takeoff form Here</div
+            ><p>Fill out form for 3D models Here and/or the Takeoff form Here</p></div
           >
         </div>
         <div class="step two">
           <div class="grayOverlay"
-            >We build the model exactly to plan and get detailed takeoffs from plans</div
+            ><p>We build the model exactly to plan and get detailed takeoffs from plans</p></div
           >
         </div>
         <div class="step three">
           <div class="grayOverlay"
-            >Load File on machine, allowing you to build your project exactly per plan</div
+            ><p>Load File on machine, allowing you to build your project exactly per plan</p></div
           >
         </div>
       </div>
