--- a/index.html
+++ b/index.html
@@ -92,6 +92,44 @@
         </div>
       </div>
 
+      <div class="steps">
+        <p class="howItWorks">Our Process</p>
+
+        <div class="anotherStep">
+          <p class="picText leftText"
+            >Fill out form for 3D models Here and/or the Takeoff form Here.</p
+          >
+          <img
+            class="rightPic"
+            src="https://res.cloudinary.com/bfrest/image/upload/f_auto,q_auto/v1624135987/Gamut/Screen_Shot_2021-06-19_at_2.50.31_PM.png"
+            width="200px"
+          />
+        </div>
+
+        <div class="anotherStep">
+          <img
+            class="leftPic"
+            src="https://res.cloudinary.com/bfrest/image/upload/f_auto,q_auto/v1624137007/Gamut/Screenshot_8.png"
+            \
+            width="200px"
+          />
+          <p class="picText rightText"
+            >We build your model exactly to plan and get detailed takeoffs from plans.</p
+          >
+        </div>
+
+        <div class="anotherStep">
+          <p class="picText leftText"
+            >You receive machine control you then load file on machine and start building.</p
+          >
+          <img
+            class="rightPic"
+            src="https://res.cloudinary.com/bfrest/image/upload/f_auto,q_auto/v1624049156/Gamut/7C8A9A02-674D-4A27-8A52-6288CD9D14A8.heic"
+            width="200px"
+          />
+        </div>
+      </div>
+
       <div id="contact">
         <form>
           <h2>Questions?</h2>
