--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <p> We also offer other things..like these options here </p>
       </div>
 
-      <div class="steps">
+      <!-- <div class="steps">
         <p class="howItWorks">Our Process</p>
         <div class="step one">
           <div class="grayOverlay"
@@ -90,28 +90,25 @@
             ><p>Load File on machine, allowing you to build your project exactly per plan</p></div
           >
         </div>
-      </div>
+      </div> -->
 
       <div class="steps">
         <p class="howItWorks">Our Process</p>
 
         <div class="anotherStep">
+          <img
+            class="rightPic"
+            src="https://res.cloudinary.com/bfrest/image/upload/f_auto,q_auto/v1624212414/Gamut/form-image.png"
+          />
           <p class="picText leftText"
             >Fill out form for 3D models Here and/or the Takeoff form Here.</p
           >
-          <img
-            class="rightPic"
-            src="https://res.cloudinary.com/bfrest/image/upload/f_auto,q_auto/v1624135987/Gamut/Screen_Shot_2021-06-19_at_2.50.31_PM.png"
-            width="200px"
-          />
         </div>
 
         <div class="anotherStep">
           <img
             class="leftPic"
-            src="https://res.cloudinary.com/bfrest/image/upload/f_auto,q_auto/v1624137007/Gamut/Screenshot_8.png"
-            \
-            width="200px"
+            src="https://res.cloudinary.com/bfrest/image/upload/f_auto,q_auto/v1624212414/Gamut/Road-_Back_Rock_Wall_and_Hifiker_SG_1.png"
           />
           <p class="picText rightText"
             >We build your model exactly to plan and get detailed takeoffs from plans.</p
@@ -119,14 +116,13 @@
         </div>
 
         <div class="anotherStep">
+          <img
+            class="rightPic"
+            src="https://res.cloudinary.com/bfrest/image/upload/f_auto,q_auto/v1624212414/Gamut/Finished_Roadway_1.png"
+          />
           <p class="picText leftText"
             >You receive machine control you then load file on machine and start building.</p
           >
-          <img
-            class="rightPic"
-            src="https://res.cloudinary.com/bfrest/image/upload/f_auto,q_auto/v1624049156/Gamut/7C8A9A02-674D-4A27-8A52-6288CD9D14A8.heic"
-            width="200px"
-          />
         </div>
       </div>
 
