text aread height

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
           <h2>Questions?</h2>
           <input type="text" placeholder="Your Name" />
           <input type="email" placeholder="Your Email" />
-          <textarea placeholder="Your Message"></textarea>
+          <textarea placeholder="Your Message" rows="20"></textarea>
           <button>Send Message</button>
         </form>
       </div>
