--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
           <h2>Questions?</h2>
           <input type="text" placeholder="Your Name" />
           <input type="email" placeholder="Your Email" />
-          <textarea placeholder="Your Message" rows="20"></textarea>
+          <textarea placeholder="Your Message" style="height: 300px"></textarea>
           <button>Send Message</button>
         </form>
       </div>
