--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./styles.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
     <title>Gamutps</title>
   </head>
   <body>
@@ -98,30 +102,30 @@
 
         <div class="anotherStep">
           <img
-            class="rightPic"
+            class="rightPic animate__animated animate__fadeInRightBig"
             src="https://res.cloudinary.com/bfrest/image/upload/f_auto,q_auto/v1624212414/Gamut/form-image.png"
           />
-          <p class="picText leftText"
+          <p class="picText leftText animate__animated animate__fadeInLeftBig"
             >Fill out form for 3D models Here and/or the Takeoff form Here.</p
           >
         </div>
 
         <div class="anotherStep">
           <img
-            class="leftPic"
+            class="leftPic animate__animated animate__fadeInLeftBig"
             src="https://res.cloudinary.com/bfrest/image/upload/f_auto,q_auto/v1624212414/Gamut/Road-_Back_Rock_Wall_and_Hifiker_SG_1.png"
           />
-          <p class="picText rightText"
+          <p class="picText rightText animate__animated animate__fadeInRightBig"
             >We build your model exactly to plan and get detailed takeoffs from plans.</p
           >
         </div>
 
         <div class="anotherStep">
           <img
-            class="rightPic"
+            class="rightPic animate__animated animate__fadeInRightBig"
             src="https://res.cloudinary.com/bfrest/image/upload/f_auto,q_auto/v1624212414/Gamut/Finished_Roadway_1.png"
           />
-          <p class="picText leftText"
+          <p class="picText leftText animate__animated animate__fadeInLeftBig"
             >You receive machine control you then load file on machine and start building.</p
           >
         </div>
