--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       </p>
     </div> -->
 
-    <h2>What We Offer</h2>
+    <h2>We are specialists at</h2>
 
     <div class="serviceCards">
       <div class="card">
@@ -86,9 +86,13 @@
             class="rightPic"
             src="https://res.cloudinary.com/bfrest/image/upload/f_auto,q_auto/v1624212414/Gamut/form-image.png"
           />
-          <p class="picText leftText"
-            >Fill out form for 3D models Here and/or the Takeoff form Here.</p
-          >
+          <p class="picText leftText">
+            Fill out one or both of our forms so we get all the details right.
+          </p>
+          <div class="formBtns">
+            <button class="formBtn">3D form</button>
+            <button class="formBtn">Takeoff form</button>
+          </div>
         </div>
 
         <div class="step stepTwo">
@@ -97,7 +101,7 @@
             src="https://res.cloudinary.com/bfrest/image/upload/f_auto,q_auto/v1624212414/Gamut/Road-_Back_Rock_Wall_and_Hifiker_SG_1.png"
           />
           <p class="picText rightText"
-            >We build your model exactly to plan and get detailed takeoffs from plans.</p
+            >We create 3D models, polyines and points that are ready for machine control.</p
           >
         </div>
 
@@ -106,9 +110,7 @@
             class="rightPic"
             src="https://res.cloudinary.com/bfrest/image/upload/f_auto,q_auto/v1624212414/Gamut/Finished_Roadway_1.png"
           />
-          <p class="picText leftText"
-            >You receive machine control you then load file on machine and start building.</p
-          >
+          <p class="picText leftText">Let your work speak for itself</p>
         </div>
       </div>
 
