--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       </p>
     </div> -->
 
-    <h2>We are specialists at</h2>
+    <h2>We Are Specialists At</h2>
 
     <div class="serviceCards">
       <div class="card">
