--- a/index.html
+++ b/index.html
@@ -86,12 +86,12 @@
             class="rightPic"
             src="https://res.cloudinary.com/bfrest/image/upload/f_auto,q_auto/v1624212414/Gamut/form-image.png"
           />
-          <p class="picText leftText">
-            Fill out one or both of our forms so we get all the details right.
-          </p>
-          <div class="formBtns">
-            <button class="formBtn">3D form</button>
-            <button class="formBtn">Takeoff form</button>
+          <div class="picText leftText">
+            <p>Fill out one or both of our forms so we get all the details right.</p>
+            <div class="formBtns">
+              <button class="formBtn">3D form</button>
+              <button class="formBtn">Takeoff form</button>
+            </div>
           </div>
         </div>
 
