--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             class="rightPic"
             src="https://res.cloudinary.com/bfrest/image/upload/f_auto,q_auto/v1624212414/Gamut/form-image.png"
           />
-          <div class="picText leftText">
+          <div class="stepText leftText">
             <p>Fill out one or both of our forms so we get all the details right.</p>
             <div class="formBtns">
               <button class="formBtn">3D form</button>
@@ -100,7 +100,7 @@
             class="leftPic"
             src="https://res.cloudinary.com/bfrest/image/upload/f_auto,q_auto/v1624212414/Gamut/Road-_Back_Rock_Wall_and_Hifiker_SG_1.png"
           />
-          <p class="picText rightText"
+          <p class="stepText rightText"
             >We create 3D models, polyines and points that are ready for machine control.</p
           >
         </div>
@@ -110,7 +110,7 @@
             class="rightPic"
             src="https://res.cloudinary.com/bfrest/image/upload/f_auto,q_auto/v1624212414/Gamut/Finished_Roadway_1.png"
           />
-          <p class="picText leftText">Let your work speak for itself</p>
+          <p class="stepText leftText">Let your work speak for itself</p>
         </div>
       </div>
 
